Bug 1801581 - Make preferred isize of SVG with no preferred aspect-ratio fall back to fallback intrinsic size. r=firefox-svg-reviewers,emilio,dholbert

To match blink and webkit's behavior.

Differential Revision: https://phabricator.services.mozilla.com/D165319