layout/svg/SVGOuterSVGFrame.cpp
@@ -178,15 +178,16 @@ nscoord SVGOuterSVGFrame::GetPrefISize(gfxContext* aRenderingContext) {
           ContainSizeAxesIfApplicable(this).ContainIntrinsicISize(*this)) {
     result = *containISize;
   } else if (isize.IsPercentage()) {
-    if (isize.IsExplicitlySet() || StylePosition()->ISize(wm).HasPercent()) {
-      // Our containing block's inline-size depends on our inline-size. In this
-      // case, return the fallback intrinsic size per
-      // https://drafts.csswg.org/css-sizing-3/#intrinsic-sizes
+    // If we are here, our inline size attribute is a percentage either
+    // explicitly (via an attribute value) or implicitly (by being unset, which
+    // is treated as 100%). The following if-condition, deciding to return
+    // either the fallback intrinsic size or zero, is made to match blink and
+    // webkit's behavior for webcompat.
+    if (isize.IsExplicitlySet() || StylePosition()->ISize(wm).HasPercent() ||
+        !GetAspectRatio()) {
       result = wm.IsVertical() ? kFallbackIntrinsicSize.height
                                : kFallbackIntrinsicSize.width;
     } else {
-      // If the width/height attribute in the inline axis is not set, return
-      // size 0 to match blink and webkit's behavior.
       result = nscoord(0);
     }
   } else {
